fix: alignment of button-wait-indicator
a margin was visible if the indicator was not shown and the vertical align was not centered.

--- a/src/app/button-wait-indicator/button-wait-indicator.component.scss
+++ b/src/app/button-wait-indicator/button-wait-indicator.component.scss
@@ -1,5 +1,9 @@
 :host {
   display: inline-block;
   vertical-align: middle;
+}
+
+mat-spinner {
   margin-right: 8px;
+  margin-bottom: 4px;
 }
